Fix responsive layout for title section, align button/text, prevent SSR window error

--- a/src/app/components/hero/hero.component.scss
+++ b/src/app/components/hero/hero.component.scss
@@ -3,7 +3,7 @@
   background-size: cover;
   background-repeat: no-repeat;
   background-position: bottom;
-  min-height: 1024px;
+  min-height: 890px;
   color: white;
   display: flex;
   flex-direction: column;
@@ -17,8 +17,15 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: center;
+    align-items: flex-start;
+    padding-left: 100px;
     text-align: center;
+
+    @media (max-width: 320px) {
+      padding-left: 30px;
+      padding-right: 30px;
+    }
+
 
     h1 {
       font-family: var(--font-main);
@@ -52,10 +59,11 @@
       }
     }
   }
+
   app-navbar {
-  position: relative;
-  z-index: 10;
-  width: 100%;
-}
+    position: relative;
+    z-index: 10;
+    width: 100%;
+  }
 
 }
