--- a/src/app/components/hero/social-hero/social-hero.component.scss
+++ b/src/app/components/hero/social-hero/social-hero.component.scss
@@ -1,7 +1,6 @@
 .social-hero {
   position: absolute;
-  left: 380px;
-  top: 660px;
+  top: 555px;
   display: flex;
   flex-direction: column;
   gap: 20px;
@@ -25,5 +24,13 @@
       width: 50px;
       height: 50px;
     }
+  }
+}
+
+
+@media (max-width: 1130px) {
+
+  .social-hero {
+    display: none;
   }
 }
